# bug_tracker

./: db.sqlite3  pyproject.toml
bug_tracker/: settings.py  urls.py
bug_tracker_app/: admin.py  forms.py  models.py  urls.py  views.py
bug_tracker_app/migrations/: 0001_initial.py
bug_tracker_app/templates/: generic_form.html  loginpage.html  main.html  signup.html
