[tool.poetry]
name = "bug_tracker"
version = "0.1.0"
description = "The creation of a webpage that manages bugs for pweboages deplayed to the http server."
authors = ["Mustafa Prodhan <mustafa.prodhan.317@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
